fix: Legacy HTML 페이지의 프론트엔드 URL을 실제 배포 URL로 수정
- index.html, children.html의 '동화 만들러가기 (음성)' 버튼 URL 수정
- story-frontend.onrender.com → story-frontend-ozbq.onrender.com
- 이제 버튼 클릭 시 정상적으로 React 앱으로 이동

--- a/legacy-pages/children.html
+++ b/legacy-pages/children.html
@@ -82,7 +82,7 @@
           <ul class="actions" style="margin-top:1rem">
             <li><button type="submit" class="button primary">DB 저장</button></li>
             <li><a href="index.html" class="button">동화 생성으로 가기</a></li>
-            <li><a href="https://story-frontend.onrender.com/auth" class="button">동화 만들러가기 (음성)</a></li>
+            <li><a href="https://story-frontend-ozbq.onrender.com/auth" class="button">동화 만들러가기 (음성)</a></li>
           </ul>
         </form>
         <pre id="saveResult" style="white-space:pre-wrap"></pre>
