--- a/legacy-pages/index.html
+++ b/legacy-pages/index.html
@@ -137,7 +137,7 @@
 
                 <ul class="actions">
                   <li><input type="submit" value="치유 동화 만들기" class="primary" /></li>
-                  <li><a href="https://story-frontend.onrender.com/auth" class="button">동화 만들러가기 (음성)</a></li>
+                  <li><a href="https://story-frontend-ozbq.onrender.com/auth" class="button">동화 만들러가기 (음성)</a></li>
                 </ul>
 
                 <div id="loadingMessage" style="display:none; margin-top: 20px;">
