--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>마음의 책장 - 상상했던 이야기가 현실이 되는 곳</title>
     <meta name="description" content="어린이를 위한 AI 기반 동화책 생성 서비스. 목소리로 이야기를 들려주면 아름다운 동화책이 만들어집니다." />
