랜딩 페이지 간소화 - 큰 버튼만 표시

--- a/frontend/public/landing/index.html
+++ b/frontend/public/landing/index.html
@@ -71,137 +71,11 @@
 
 
 
-      <!-- Story Form -->
-      <section class="story-tabs" aria-label="동화 생성 입력 방식 선택">
-        <!-- 탭 버튼 -->
-        <div class="tab-buttons" role="tablist" aria-orientation="horizontal">
-          <button id="tab-info" class="tab-btn is-active" role="tab" aria-selected="true" aria-controls="panel-info">
-            아동 정보 입력
-          </button>
-          <button id="tab-free" class="tab-btn" role="tab" aria-selected="false" aria-controls="panel-free">
-            직접 이야기 쓰기
-          </button>
-        </div>
-
-        <!-- 탭 내용 -->
-        <div class="tab-panels-viewport">
-          <div class="tab-panels-track" id="tabTrack" style="transform: translateX(0%);">
-
-            <!-- Panel 1: 아동 정보 입력 -->
-            <div id="panel-info" class="tab-panel" role="tabpanel" aria-labelledby="tab-info">
-              <form id="storyForm">
-                <div class="fields two-col">
-                  <div class="field full">
-                    <h2>치유 동화 만들기</h2>
-                  </div>
-
-                  <div class="field">
-                    <label for="childIdInput">아이 번호</label>
-                    <input type="number" id="childIdInput" placeholder="예: 206990" />
-                    <button type="button" id="childIdLookupBtn" class="button small"
-                      style="margin-top: 0.5em; background: #ddb45b; color: #ffffff; border: none;">아이 번호 찾기</button>
-                  </div>
-
-                  <div class="field">
-                    <label for="childName">아이 이름</label>
-                    <input type="text" name="childName" id="childName" placeholder="이름을 입력하세요" required />
-                  </div>
-
-                  <div class="field">
-                    <label for="childAge">아이 나이</label>
-                    <input type="number" name="childAge" id="childAge" placeholder="0" min="1" max="18" required />
-                  </div>
-
-                  <div class="field">
-                    <label for="abuseType">학대 유형</label>
-                    <select name="abuseType" id="abuseType" required>
-                      <option value="">선택하세요</option>
-                      <option value="physical">신체적 학대</option>
-                      <option value="verbal">언어적 학대</option>
-                      <option value="neglect">방임</option>
-                      <option value="emotional">정서적 학대</option>
-                    </select>
-                  </div>
-
-                  <div class="field">
-                    <label for="childInterests">아이의 관심사</label>
-                    <input type="text" name="childInterests" id="childInterests" placeholder="예: 동물, 자연, 그림 그리기 등" />
-                  </div>
-
-                  <div class="field full">
-                    <label for="childSituation">아이의 현재 상황</label>
-                    <textarea name="childSituation" id="childSituation" rows="5"
-                      placeholder="아이의 현재 상태나 상황을 구체적으로 적어주세요. 입력 내용은 치유 동화를 생성하는 데 활용됩니다." required></textarea>
-                  </div>
-                </div>
-
-                <ul class="actions">
-                  <li><input type="submit" value="치유 동화 만들기" class="primary" /></li>
-                  <li><a href="/create_input" class="button">동화 만들러가기 (음성)</a></li>
-                </ul>
-
-                <div id="loadingMessage" style="display:none; margin-top: 20px;">
-                  <p style="color: #000000; text-align: center;">
-                    <span class="icon solid fa-spinner fa-spin"></span>
-                    동화를 생성하고 있습니다... 잠시만 기다려주세요.
-                  </p>
-                </div>
-              </form>
-            </div>
-
-
-
-
-
-
-
-
-            <!-- Panel 2: 직접 이야기 쓰기 -->
-            <div id="panel-free" class="tab-panel" role="tabpanel" aria-labelledby="tab-free">
-              <form id="childStoryForm">
-                <div class="fields">
-                  <div class="field full">
-                    <h2>직접 작성한 이야기</h2>
-                    <label for="childFreeText">아이를 위한 글을 적어주세요</label>
-
-                    <!-- textarea + 마이크 버튼 컨테이너 -->
-                    <div style="position: relative; margin-bottom: 1em;">
-                      <textarea id="childFreeText" rows="8" placeholder="직접 아이에게 전하고 싶은 말을 적어주세요." style="width: 100%; padding-right: 60px;"></textarea>
-                      <button type="button" id="micBtn" class="mic-btn" aria-pressed="false" title="음성으로 입력"
-                        style="position: absolute; top: 10px; right: 10px; width: 45px; height: 45px; border-radius: 50%; border: 2px solid #ddb45b; background: #ffffff; font-size: 14px; cursor: pointer; display: flex; align-items: center; justify-content: center; transition: all 0.3s ease; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-                        MIC
-                      </button>
-                    </div>
-
-                    <!-- 상태 메시지 -->
-                    <small id="micStatus" aria-live="polite" style="display:block; margin-bottom: 0.8em; color:#667eea; font-weight: 500; min-height: 20px;"></small>
-
-                    <!-- 안내문 -->
-                    <p style="margin:0; padding: 0.8em 1em; background: #f8f9fa; border-left: 3px solid #ddb45b; border-radius: 4px; font-size: 0.9em; color: #666;">
-                      [INFO] 입력하신 내용은 검토 후 동화로 재구성되며, 개인정보는 저장되지 않습니다.
-                    </p>
-                  </div>
-                </div>
-
-                <ul class="actions">
-                  <li><input type="submit" value="직접 동화 생성" class="primary" /></li>
-                </ul>
-
-                <div id="childLoadingMessage" style="display:none; margin-top: 20px;">
-                  <p style="color: #000000; text-align: center;">
-                    <span class="icon solid fa-spinner fa-spin"></span>
-                    동화를 생성하고 있습니다... 잠시만 기다려주세요.
-                  </p>
-                </div>
-              </form>
-            </div>
-
-
-
-
-
-          </div>
-        </div>
+      <!-- CTA Section -->
+      <section style="max-width: 800px; margin: 4em auto; text-align: center; padding: 3em 2em;">
+        <h2 style="font-size: 2.5em; margin-bottom: 0.5em; color: #212931;">치유 동화를 만들어보세요</h2>
+        <p style="font-size: 1.2em; margin-bottom: 2em; color: #666;">아이의 목소리로 이야기를 들려주면 맞춤형 동화책을 만들어드립니다</p>
+        <a href="/create_input" class="button primary" style="font-size: 1.5em; padding: 1.2em 3em; border-radius: 50px;">동화 만들러가기</a>
       </section>
 
 
